--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Unity WebGL Player | StudyThing</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=1530 height=760 style="width: 1530px; height: 760px; background: #231F20"></canvas>
-    <script src="Build/B06.loader.js"></script>
+    <canvas id="unity-canvas" width=1920 height=1080 tabindex="-1" style="width: 1920px; height: 1080px; background: #231F20"></canvas>
+    <script src="Build/B07_release.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/B06.data",
-        frameworkUrl: "Build/B06.framework.js",
-        codeUrl: "Build/B06.wasm",
+        dataUrl: "Build/B07_release.data",
+        frameworkUrl: "Build/B07_release.framework.js",
+        codeUrl: "Build/B07_release.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "GCO",
         productName: "StudyThing",
