--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | StudyThing</title>
+    <style>
+      *:focus { outline: none; } 
+      body { background-color: #151516; }
+    </style>
   </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0; *:focus { outline: none; } body { background-color: #3D3F42; }">
+  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=1920 height=1080 tabindex="-1" style="width: 1920px; height: 1080px; background: #151516"></canvas>
     <script src="Build/B08_release.loader.js"></script>
     <script>
