--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | StudyThing</title>
+    <title>HYST</title>
     <style>
       *:focus { outline: none; } 
       body { background-color: #151516; }
